testsuite/tests/rename/should_compile/Rn044_B.hs
module Rn044_B where

x = 'x'
