testsuite/tests/rename/should_fail/T13568a.hs
module T13568a where

data T = A
